<?xml version="1.0"?>
<package>
  <name>open_manipulator_dynamixel_ctrl</name>
  <version>0.0.0</version>
  <description>The open_manipulator_dynamixel_ctrl package</description>
  <license>Apache License 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>open_manipulator_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>open_manipulator_msgs</run_depend>
  <export></export>
</package>
