<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_dynamixel_ctrl</name>
  <version>0.1.1</version>
  <description>
    The Dynamixel ctroller package for OpenManipulator
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="website">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
</package>
