<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_dynamixel_ctrl</name>
  <version>1.0.0</version>
  <description>
    The Dynamixel controller package based on Dynamixel-Workbench for OpenManipulator.
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_dynamixel_ctrl</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_workbench_toolbox</depend>
</package>
