<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_example</name>
  <version>1.0.0</version>
  <description>
    open_manipulator_example
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>open_manipulator_msgs</depend>
</package>
