<?xml version="1.0"?>
<package>
  <name>open_manipulator_gazebo</name>
  <version>0.0.1</version>
  <description>open_manipulator_gazebo package</description>
  <license>Apache License 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>position_controllers</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>position_controllers</run_depend>
  <export>
  </export>
</package>
